# Marshalling

./: CMakeLists.txt  README.md
src/: BufferedWriter.h  DecoderHelpers.h  FileReader.h  FileWriter.h  IDecoder.h  IDeserializable.h  IEncoder.h  IReader.h  ISerializable.h  IUnmarshal.h  IWriter.h  IniDecoder.cpp  IniDecoder.h  IniEncoder.cpp  IniEncoder.h  IniParser.cpp  IniParser.h  JSONDecoder.cpp  JSONDecoder.h  JSONEncoder.cpp  JSONEncoder.h  JSONParser.cpp  JSONParser.h  PrintfAttribute.h  StringWriter.cpp  StringWriter.h  XMLDecoder.cpp  XMLDecoder.h  XMLEncoder.cpp  XMLEncoder.h  XMLParser.cpp  XMLParser.h
tests/: test_filewriter.cpp  test_inidecoder.cpp  test_iniparser.cpp  test_iniunmarshal.cpp  test_ireader.cpp  test_jsondecoder.cpp  test_jsonencoder.cpp  test_xmldecoder.cpp  test_xmlencoder.cpp  test_xmlparser.cpp  test_xmlunmarshalling.cpp
